# feram

./: .gitignore  00MEMO  Autotools-memo.ja  BenchmarkHowTo.en  CMake-memo.ja  ChangeLog  Changes  Development.txt  FFT.en  FFTW-memo.ja  INSTALL  Makefile.am  Nightly.en  README  README.en  README.ja  README.md  TODO  autotools-memo.ja  configure.ac  in-place-FFT.ja.txt  libblaslapack  logo.eps  publication.css  publication.html  style.css  tutorial.AICS.en.txt  tutorial.CMD.en.txt  tutorial.CMD.ja.txt  tutorial.IMR.ja.txt  tutorial.en.txt  ulmul.rb  ulwmul2html.rb
libbuilt_in_fft/: Makefile.am  fft1d.f  fft1d_fwd_0002.f  fft1d_fwd_0004.f  fft1d_fwd_0008.f  fft1d_fwd_0016.f  fft1d_fwd_0032.f  fft1d_fwd_0064.f  fft1d_fwd_0128.f  fft1d_fwd_0256.f  fft1d_fwd_0512.f  fft1d_inv_0002.f  fft1d_inv_0004.f  fft1d_inv_0008.f  fft1d_inv_0016.f  fft1d_inv_0032.f  fft1d_inv_0064.f  fft1d_inv_0128.f  fft1d_inv_0256.f  fft1d_inv_0512.f  fft3d.f  generatefft.rb  test_fft1d.f  test_fft3d.f  timing.txt
src/: DDB2short.F  GPa_check.sh  Makefile.am  Z_star_R.txt  acouFFT.F  alloc_coord.F  average.F  average_module.F  cholesky_d.f  cholesky_z.f  coord2deviation.F  coord2dist.rb  coord_module.F  cross-section-q.sh  cufft_bonbi.ja.txt  cufft_check.F  cufft_check.f  cufft_check_nonp2.csh  cufft_functions.c  cufft_module.f  cufft_specifications.ja.txt  dVdac.F  dVddi-dipole-dipole.F  dVddi-homo-coupling.F  dVddi-unharmonic.F  dVddi_E_field.F  dVddi_inho_coupling.F  date_and_time2message.F  date_and_time_check.f  date_and_time_module.f  decay-functions.f  decay_function_check.F  decay_function_check.f  decay_function_check.gp  decay_function_module.f  decay_function_ulmul.en  defects-maker.rb  defects_maker.rb  defects_maker_check.gp  defects_maker_check.sh  (+208 more)
src/01example/: Makefile  externalE.sh  hysteresis.gp
src/01example-BaTiO3-epit-hysteresis-loop/: Makefile  externalE.sh  hysteresis-example.eps  hysteresis.gp  plot.gp
src/01example-epit-hysteresis-loop/: Makefile  all-potential-surface.gp  externalE.sh
src/02example-BaTiO3-potential-surface/: all-potential-surface.gp  all-potential-surface.ps  potential-surface.sh
src/02example-potential-surface/: Makefile  all-potential-surface.gp  potential-surface.sh
src/03example-BaTiO3-bulk-phase-transition/: Makefile  README  cooling.avg  cooling.sh  heating.avg  heating.sh  histogram.gp  histogram.rb  strain-susceptibility.eps  strain-susceptibility.gp  strain.heating-cooling.gp
src/04example-BaTiO3-old-param-film-E_wave/: Lz064gap_id0film100K.feram  Lz128gap_id2film100K.feram  Lz256gap_id2film100K.feram  Lz512gap_id2film100K.feram  all.csh  hl-hysteresis.gp
src/04fft/: L007.eps  L015.eps  L031.eps  L255.eps  Makefile  cont.gp  epit-40x40-L007-D1-5.0GPa-100K  feram.in  feram.in.avg  feram.in.fft  feram.in.param  feram.old  restart.coord
src/05example-BaTiO3-potential-surface-110/: Makefile  all-potential-surface-110.gp  potential-surface-110.sh  striped.eps
src/06example-BaTiO3-potential-surface-100/: Makefile  all-potential-surface-110.gp  potential-surface-110.sh
src/07example-BaTiO3-epit-32x32-L004-D0-5.0GPa-0.01-350-500K/: strain-susceptibility.gp
src/08example-BaTiO3-dispersion/: Makefile  bulk04x04x04.feram  bulk08x08x08.feram  bulk32x32x32  bulk32x32x32.feram  dipole-dipole-axis.gp  dipole-dipole.gp  inhomo-K.eps  inhomo-K.gp
src/09example-BaTiO3-bulk-leap-frog/: README
src/10-example-PbTiO3-DDB2short/: Makefile  PbTiO3-DDB-3.9500.in  README  perovskite-Delta.files  perovskite-Delta.in  perovskite-Gamma.files  perovskite-Lambda.in  perovskite-Lambda_o_DS1_DDB  perovskite-M.out  perovskite-R.files  perovskite-R.out  perovskite-S.files  perovskite-Sigma.files  perovskite-Sigma.in  perovskite-Sigma_o_DS1_DDB  perovskite-T.files  perovskite-X.files  perovskite-Z.files  perovskite-Z_o_DS1_DDB  perovskite-band2eps.eps  perovskite-band2eps.in  perovskite-plot.out_PHFRQ  perovskite-plot_band2eps.displ
src/10example-PbTiO3-DDB2short/: BaTiO3-4.0000-DDB2short.in  BaTiO3-4.0000-diagonalize15x15.out  Makefile  PbTiO3-3.9500-DDB2short.in  PbTiO3-3.9500-diagonalize15x15.out  README  perovskite-Delta_o_DS1_DDB  perovskite-Gamma.in  perovskite-Gamma.out  perovskite-Gamma_o_DS1_DDB  perovskite-Gamma_o_DS3_DDB  perovskite-Lambda.files  perovskite-M.files  perovskite-M.in  perovskite-M_o_DS1_DDB  perovskite-R.in  perovskite-R_o_DS1_DDB  perovskite-S.in  perovskite-S_o_DS1_DDB  perovskite-Sigma.out  perovskite-T.in  perovskite-T_o_DS1_DDB  perovskite-X.in  perovskite-X.out  perovskite-X_o_DS1_DDB  perovskite-Z.in  perovskite-anaddb.files  perovskite-anaddb.in  perovskite-band2eps.files  perovskite-mrgddb.in  perovskite-plot.files  perovskite-plot_band2eps.freq
src/11example-BaTiO3-new-hysteresis-loop/: 00TIMING.txt  all.FX1  all.FX10  all.SR16000  all.gp  all.mpich2  all.t2k  hysteresis  hysteresis.fx1  hysteresis.gp  hysteresis_d0.FX1  hysteresis_d0.feram  hysteresis_d1  hysteresis_d1.gp  hysteresis_d1_backwrd.feram  hysteresis_d1_forward.feram  hysteresis_d2  hysteresis_d2.feram  hysteresis_d2.gp
src/14example-BaTiO3-ZVR-0GPa-4.0kappa2/: 0GPa.avg  cooling.avg  cooling.sh  strain-one.eps  strain-one.gp
src/15example-BaTiO3-new-param-defects/: README  backward  backward.defects  backward.hl  defects.gp  forward  forward.defects  forward.hl  nodefects.hl
src/17example-PbTiO3-100-900K/: README  coolflm.csh  coolflm.sh  cooling.avg  cooling.csh  cooling.jcf  cooling.sh  cross-section-q.sh  heatflm.csh  heatflm.sh  heating.avg  heating.csh  heating.jcf  heating.sh  strain-susceptibility.gp  strain.gp  two4threads.csh  two6threads.csh
src/18example-benchmark/: 00MEMO.txt  SR16000.gp  backward.feram  epit040x040x040.FX10  epit040x040x040.feram  epit100x100x100.FX10  epit100x100x100.feram  epit100x100x100.timing.E5462.csh  epit256x256x243.X5690.bash  epit256x256x243.feram  epit256x256x243.jcf  epit256x256x256-31t-32t-63t-64t.jcf  epit256x256x256.FX10  epit256x256x256.FX10.profiling  epit256x256x256.X5690.bash  epit256x256x256.feram  epit256x256x256.gp  epit256x256x256.jcf  epit256x256x256.phi  epit256x256x256_SMT_off.jcf  epit300x300x300.FX10  (+65 more)
(+688 files in other folders)
